check image and extracted face cv::Mat

BUG: 499172
FIXED-IN: 8.6.0
Comment #5